--- a/WpfApp2/MainWindow.xaml
+++ b/WpfApp2/MainWindow.xaml
@@ -1,12 +1,56 @@
 ﻿<Window x:Class="WpfApp2.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:WpfApp2"
-        mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        
+        Title="MainWindow" 
+        
+        Height="450" Width="800"
+        Style="{DynamicResource ResourceKey=MainWindowStyle}">
     <Grid>
-
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="30" />
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="25" />
+        </Grid.RowDefinitions>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="15" />
+            <ColumnDefinition Width="*" MinWidth="100"/>
+            <ColumnDefinition Width="*" MinWidth="200"/>
+            <ColumnDefinition Width="15" />
+        </Grid.ColumnDefinitions>
+        
+        <DockPanel Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="4">
+            <Menu DockPanel.Dock="Top" >
+                <MenuItem Header="_File">
+                    <MenuItem Header="E_xit" 
+                              Click="MenuItem_Exit_Click" />
+                </MenuItem>
+                <MenuItem x:Name="MenuItemStyles"
+                          Header="_Styles"/>
+            </Menu>
+        </DockPanel>
+        <Label Content="First Name"
+               FlowDirection="RightToLeft" 
+               Grid.Row="2" Grid.Column="1" />
+        <Label Content="Age"
+               FlowDirection="RightToLeft" 
+               Grid.Row="3" Grid.Column="1" />
+        <Label Content="Last Name"
+               FlowDirection="RightToLeft" 
+               Grid.Row="4" Grid.Column="1" />
+        
+        <TextBox Grid.Column="2" Grid.Row="2" />
+        <TextBox Grid.Column="2" Grid.Row="3" />
+        <TextBox Grid.Column="2" Grid.Row="4" />
+        
+        <Button Content="Clear" 
+                Height="23" Width="75"
+                HorizontalAlignment="Right" 
+                VerticalAlignment="Top"
+                Grid.Column="2" Grid.Row="5"/>
     </Grid>
 </Window>
